Changes related to: 1.Implementation of adding phase